# prezzemolo

./: .bumpversion.cfg  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.dev.md  README.md  mypy.ini  setup.cfg
docs/: developer_faq.md  user_faq.md
src/prezzemolo/: avl_tree.py  binary_tree.py  graph.py  utility.py  vertex.py
tests/: test_avl_tree.py  test_graph.py
