[metadata]
name = prezzemolo
version = 0.0.1
description = A collection of robust, efficient and small classic algorithms and data structures.

long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
keywords = utility, algorithm, data structure, tree, graph
license = Apache License 2.0
author = eprbell
url = https://github.com/eprbell/prezzemolo
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed
project_urls =
    Source Code = https://github.com/eprbell/prezzemolo
    Developer Documentation = https://github.com/eprbell/prezzemolo/blob/main/README.dev.md
    User Documentation = https://github.com/eprbell/prezzemolo/blob/main/README.md
    Contact = https://eprbell.github.io/eprbell/about.html

[options]
package_dir =
    = src
packages = find:
install_requires =

[options.extras_require]
dev =
    autopep8
    bandit
    black
    bumpversion
    flake8
    isort
    mypy
    pep8
    pre-commit
    pylint
    pytest
    pytest-mock
    rope

[options.packages.find]
where = src
include_package_data = True
zip_safe = False
python_requires = >=3.7

